Added reg40_read, cleanups in dir40 plugin.
(Logical change 1.2438)

--- a/reiser4progs.spec.in
+++ b/reiser4progs.spec.in
@@ -30,7 +30,7 @@ make
 
 %files -f %name.lang
 %_mandir/*
-%doc AUTHORS BUGS ChangeLog README THANKS TODO COPYING demos/*.c
+%doc AUTHORS BUGS NEWS ChangeLog README THANKS TODO COPYING demos/*.c
 
 %changelog
 Fri May 31 2002 Yury Umanets <umka@namesys.com> 
