Fixes and cleanups in dir40 and reg40 plugins. Added demos/cat.c
(Logical change 1.2440)

--- a/demos/Makefile.am
+++ b/demos/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = list info ls
+noinst_PROGRAMS = list info ls cat
 
 list_SOURCES	= list.c
 
@@ -18,6 +18,13 @@ ls_SOURCES	= ls.c
 ls_LDFLAGS	= $(PROGS_LDFLAGS)
 
 ls_LDADD 	= $(top_builddir)/libreiser4/libreiser4.la \
+	          $(top_builddir)/progs/libmisc/libmisc.la
+
+cat_SOURCES	= cat.c
+
+cat_LDFLAGS	= $(PROGS_LDFLAGS)
+
+cat_LDADD 	= $(top_builddir)/libreiser4/libreiser4.la \
 	          $(top_builddir)/progs/libmisc/libmisc.la
 
 INCLUDES	= -I$(top_srcdir)/include -I$(top_srcdir)/progs/include
