--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS 			= format40 journal40 alloc40 node40 stat40 direntry40 internal40 \
 				  oid40 key40 dir40 format36 journal36 alloc36 r5_hash tea_hash \
-				  rupasov_hash fnv1_hash sdext_unix reg40 tail40
+				  rupasov_hash fnv1_hash sdext_unix reg40 tail40 sdext_lw
 
 noinst_LTLIBRARIES	     	= libheader.la libfooter.la libreiser4-plugin.la
 
@@ -25,6 +25,7 @@ libreiser4_plugin_la_LIBADD  	= libheader.la \
 			          rupasov_hash/librupasov_hash-static.la \
 			          fnv1_hash/libfnv1_hash-static.la \
 			          sdext_unix/libsdext_unix-static.la \
+			          sdext_lw/libsdext_lw-static.la \
 			          libfooter.la
 
 libreiser4_plugin_la_SOURCES	=
