--- a/configure.in
+++ b/configure.in
@@ -267,6 +267,7 @@ AC_OUTPUT([
     plugin/rupasov_hash/Makefile
     plugin/fnv1_hash/Makefile
     plugin/sdext_unix/Makefile
+    plugin/sdext_lw/Makefile
     demos/Makefile
     progs/Makefile
     progs/include/Makefile
