Fixes in ./doc/Makefile.am and ./progs/mkfs/Makefile.am.
(Logical change 1.2466)

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -8,7 +8,9 @@ uninstall-make_reiser4_8:
 	fi;
 
 install-make_reiser4_8: mkfs.reiser4.8 uninstall-make_reiser4_8
-	ln $(mandir)/man8/mkfs.reiser4.8 $(mandir)/man8/make_reiser4.8
+	if test -f $(mandir)/man8/mkfs_reiser4.8; then \
+	    ln $(mandir)/man8/mkfs.reiser4.8 $(mandir)/man8/make_reiser4.8; \
+	fi;
 
 install-data-local: install-make_reiser4_8
 uninstall-local: uninstall-make_reiser4_8
