--- a/progs/mkfs/Makefile.am
+++ b/progs/mkfs/Makefile.am
@@ -15,7 +15,9 @@ uninstall-make_reiser4:
 	fi;
 
 install-make_reiser4: mkfs.reiser4 uninstall-make_reiser4
-	ln $(sbindir)/mkfs.reiser4 $(sbindir)/make_reiser4
+	if test -f $(sbindir)/mkfs.reiser4; then \
+	    ln $(sbindir)/mkfs.reiser4 $(sbindir)/make_reiser4; \
+	fi;
 
 install-data-local: install-make_reiser4
 uninstall-local: uninstall-make_reiser4
