Fixes in configure.in.
(Logical change 1.2467)

--- a/config.h.in
+++ b/config.h.in
@@ -61,6 +61,12 @@
 /* Define if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
+/* Define if you have the `readline' library (-lreadline). */
+#undef HAVE_LIBREADLINE
+
+/* Define if you have the `uuid' library (-luuid). */
+#undef HAVE_LIBUUID
+
 /* Define if your system has a working `malloc' function. */
 #undef HAVE_MALLOC
 
