Fixes in libaal file.c.
(Logical change 1.2472)

--- a/configure.in
+++ b/configure.in
@@ -130,8 +130,12 @@ AC_PROG_LN_S
 AC_PROG_RANLIB
 
 AC_SYS_LARGEFILE
-
 CFLAGS="$CFLAGS -D_FILE_OFFSET_BITS=${ac_cv_sys_file_offset_bits}"
+AC_CHECK_SIZEOF(off_t, 64, [
+	#include <stdio.h>
+	#include <sys/types.h>
+	#include <unistd.h>
+])
 
 AM_PROG_LIBTOOL
 
