--- a/config.h.in
+++ b/config.h.in
@@ -148,6 +148,9 @@
 /* Name of package */
 #undef PACKAGE
 
+/* The size of a `off_t', as computed by sizeof. */
+#undef SIZEOF_OFF_T
+
 /* If using the C implementation of alloca, define if you know the
    direction of stack growth for your system; otherwise it will be
    automatically deduced at run-time.
