--- a/include/reiser4/Makefile.am
+++ b/include/reiser4/Makefile.am
@@ -1,7 +1,7 @@
 reiser4includedir		= $(includedir)/reiser4
 reiser4include_HEADERS		= reiser4.h filesystem.h format.h journal.h \
 				  file.h alloc.h oid.h tree.h plugin.h node.h \
-				  key.h coord.h cache.h master.h item.h factory.h
+				  key.h coord.h master.h item.h factory.h avatar.h
 
 noinst_HEADERS	      		= 
 
