--- a/libreiser4/Makefile.am
+++ b/libreiser4/Makefile.am
@@ -2,7 +2,7 @@ includedir		     = -I$(top_srcdir)/include
 
 libreiser4_sources	     = libreiser4.c filesystem.c format.c journal.c \
 			       alloc.c oid.c factory.c node.c tree.c key.c \
-			       file.c coord.c cache.c master.c item.c
+			       file.c coord.c master.c item.c avatar.c
 
 lib_LTLIBRARIES		     = libreiser4.la
 
@@ -27,3 +27,4 @@ libreiser4_static_la_LIBADD  = $(top_builddir)/libaal/libaal-static.la \
 libreiser4_static_la_SOURCES = $(libreiser4_sources)
 
 INCLUDES = $(includedir)
+
