--- a/configure.in
+++ b/configure.in
@@ -167,7 +167,7 @@ AC_C_BIGENDIAN
 dnl Checks for library functions.
 if test "$with_readline" = yes; then
     OLD_LIBS="$LIBS"
-    LIBS="$LIBS $PROGS_LDADD -lreadline"
+    LIBS="$LIBS $PROGS_LDADD"
     AC_CHECK_FUNCS(rl_completion_matches)
     LIBS="$OLD_LIBS"
 fi
@@ -185,10 +185,13 @@ AC_CHECK_FUNCS([getcwd getwd memmove mempcpy memset stpcpy strcasecmp strchr str
 dnl Check for libdl, if we are doing dynamic loading
 LIBREISER4_LIBS=""
 if test x$enable_compact = xno && test x$enable_monolithic = xno; then
-    AC_CHECK_LIB(dl, dlopen, LIBREISER4_LIBS="$LIBREISER4_LIBS -ldl",
+    OLD_LIBS="$LIBS"
+    LIBS=""
+    AC_CHECK_LIB(dl, dlopen, LIBREISER4_LIBS="$LIBREISER4_LIBS $LIBS",
 	AC_MSG_ERROR(libdl not found!)
 	exit
     )
+    LIBS="$OLD_LIBS"
 fi
 AC_SUBST(LIBREISER4_LIBS)
 
