--- a/progs/debugfs/Makefile.am
+++ b/progs/debugfs/Makefile.am
@@ -3,7 +3,7 @@ debugfs_reiser4_SOURCES	= debugfs.c
 
 debugfs_reiser4_LDADD 	= $(top_builddir)/libreiser4/libreiser4.la \
 			  $(top_builddir)/progs/libmisc/libmisc.la \
-			  $(PROGS_LDADD)
+			  $(PROGS_LIBS)
 			  
 debugfs_reiser4_LDFLAGS = $(PROGS_LDFLAGS)
 
