--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,17 +1,4 @@
-man_MANS   = mkfs.reiser4.8
+man_MANS   = mkfs.reiser4.8 debugfs.reiser4.8
 
 EXTRA_DIST = $(man_MANS)
-
-uninstall-make_reiser4_8:
-	if test -f $(mandir)/man8/make_reiser4.8; then \
-	    rm -f $(mandir)/man8/make_reiser4.8; \
-	fi;
-
-install-make_reiser4_8: mkfs.reiser4.8 uninstall-make_reiser4_8
-	if test -f $(mandir)/man8/mkfs_reiser4.8; then \
-	    ln $(mandir)/man8/mkfs.reiser4.8 $(mandir)/man8/make_reiser4.8; \
-	fi;
-
-install-data-local: install-make_reiser4_8
-uninstall-local: uninstall-make_reiser4_8
 
