A lot of fixes and cleanups in debugfs. Added print method for tail40_print. Added sdext_lt and sdext_symlink stat data extention plugins.
(Logical change 1.2581)

--- a/configure.in
+++ b/configure.in
@@ -272,6 +272,8 @@ AC_OUTPUT([
     plugin/fnv1_hash/Makefile
     plugin/sdext_unix/Makefile
     plugin/sdext_lw/Makefile
+    plugin/sdext_lt/Makefile
+    plugin/sdext_symlink/Makefile
     demos/Makefile
     progs/Makefile
     progs/include/Makefile
