--- a/include/repair/Makefile.am
+++ b/include/repair/Makefile.am
@@ -1,2 +1,2 @@
 repairincludedir	= $(includedir)/repair
-repairinclude_HEADERS   = librepair.h repair.h filesystem.h alloc.h master.h oid.h format.h node.h coord.h filter.h scan.h
+repairinclude_HEADERS   = librepair.h repair.h filesystem.h alloc.h master.h oid.h format.h node.h coord.h item.h filter.h scan.h
