--- a/plugin/key40/Makefile.am
+++ b/plugin/key40/Makefile.am
@@ -7,15 +7,18 @@ else
 key40_sources                   = key40.c key40_repair.c key40.h
 endif
 
-lib_LTLIBRARIES			= libkey40.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES		= libkey40-static.la
+
+libkey40_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
+libkey40_static_la_SOURCES	= $(key40_sources)
+else
+lib_LTLIBRARIES			= libkey40.la
 
 libkey40_la_LIBADD		= $(top_builddir)/libaal/libaal.la
 libkey40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
 libkey40_la_SOURCES		= $(key40_sources)
-
-libkey40_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
-libkey40_static_la_SOURCES	= $(key40_sources)
+endif
 
 INCLUDES = $(includedir)
 
