--- a/config.h.in
+++ b/config.h.in
@@ -61,6 +61,9 @@
 /* Define if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
+/* Define if you have the `dl' library (-ldl). */
+#undef HAVE_LIBDL
+
 /* Define if you have the `readline' library (-lreadline). */
 #undef HAVE_LIBREADLINE
 
