--- a/configure.in
+++ b/configure.in
@@ -203,10 +203,11 @@ LIBREISER4_LIBS=""
 if test x$enable_compact = xno && test x$enable_monolithic = xno; then
     OLD_LIBS="$LIBS"
     LIBS=""
-    AC_CHECK_LIB(dl, dlopen, LIBREISER4_LIBS="$LIBREISER4_LIBS $LIBS",
+    AC_CHECK_LIB(dl, dlopen, ,
 	AC_MSG_ERROR(libdl not found!)
 	exit
     )
+    LIBREISER4_LIBS="$LIBREISER4_LIBS $LIBS"
     LIBS="$OLD_LIBS"
 fi
 AC_SUBST(LIBREISER4_LIBS)
