--- a/libreiser4/Makefile.am
+++ b/libreiser4/Makefile.am
@@ -15,7 +15,9 @@ libreiser4_la_LIBADD	     = $(top_builddir)/libaal/libaal.la \
 			       $(top_builddir)/libaux/libaux-static.la \
 			       $(top_builddir)/plugin/libreiser4-plugin.la
 else
-libreiser4_la_LIBADD	     = $(top_builddir)/libaal/libaal.la @LIBREISER4_LIBS@
+libreiser4_la_LIBADD	     = $(top_builddir)/libaal/libaal.la \
+			       $(top_builddir)/libaux/libaux-static.la \
+			       @LIBREISER4_LIBS@
 endif
 
 libreiser4_la_SOURCES	     = $(libreiser4_sources)
