--- a/plugin/alloc36/Makefile.am
+++ b/plugin/alloc36/Makefile.am
@@ -3,17 +3,20 @@ libdir			     = $(plugindir)
 
 alloc36_sources		     = alloc36.c alloc36.h
 
-lib_LTLIBRARIES		     = liballoc36.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES	     = liballoc36-static.la
+
+liballoc36_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+liballoc36_static_la_SOURCES = $(alloc36_sources)
+else
+lib_LTLIBRARIES		     = liballoc36.la
 
 liballoc36_la_LIBADD	     = $(top_builddir)/libaal/libaal.la	\
 			       $(top_builddir)/libaux/libaux-static.la
 	
 liballoc36_la_LDFLAGS	     = $(PLUGIN_LDFLAGS)
 liballoc36_la_SOURCES	     = $(alloc36_sources)
-
-liballoc36_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
-liballoc36_static_la_SOURCES = $(alloc36_sources)
+endif
 
 INCLUDES = $(includedir)
 
