--- a/plugin/alloc40/Makefile.am
+++ b/plugin/alloc40/Makefile.am
@@ -3,16 +3,19 @@ libdir			     = $(plugindir)
 
 alloc40_sources		     = alloc40.c alloc40.h
 
-lib_LTLIBRARIES		     = liballoc40.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES	     = liballoc40-static.la
+
+liballoc40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+liballoc40_static_la_SOURCES = $(alloc40_sources)
+else
+lib_LTLIBRARIES		     = liballoc40.la
 
 liballoc40_la_LIBADD	     = $(top_builddir)/libaal/libaal.la \
 			       $(top_builddir)/libaux/libaux-static.la
 	
 liballoc40_la_LDFLAGS	     = $(PLUGIN_LDFLAGS)
 liballoc40_la_SOURCES	     = $(alloc40_sources)
-
-liballoc40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
-liballoc40_static_la_SOURCES = $(alloc40_sources)
+endif
 
 INCLUDES = $(includedir)
