--- a/plugin/dir40/Makefile.am
+++ b/plugin/dir40/Makefile.am
@@ -3,15 +3,18 @@ libdir			    = $(plugindir)
 
 dir40_sources		    = dir40.c dir40.h
 
-lib_LTLIBRARIES		    = libdir40.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES	    = libdir40-static.la
+
+libdir40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libdir40_static_la_SOURCES = $(dir40_sources)
+else
+lib_LTLIBRARIES		    = libdir40.la
 
 libdir40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la
 libdir40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
 libdir40_la_SOURCES	    = $(dir40_sources)
-
-libdir40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
-libdir40_static_la_SOURCES = $(dir40_sources)
+endif
 
 INCLUDES = $(includedir)
 
