--- a/plugin/direntry40/Makefile.am
+++ b/plugin/direntry40/Makefile.am
@@ -7,17 +7,20 @@ else
 direntry40_sources              = direntry40.c direntry40_repair.c direntry40.h
 endif
 
-lib_LTLIBRARIES			= libdirentry40.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES		= libdirentry40-static.la
+
+libdirentry40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libdirentry40_static_la_SOURCES = $(direntry40_sources)
+else
+lib_LTLIBRARIES			= libdirentry40.la
 
 libdirentry40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
 				  $(top_builddir)/libaux/libaux-static.la
 	
 libdirentry40_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
 libdirentry40_la_SOURCES	= $(direntry40_sources)
-
-libdirentry40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
-libdirentry40_static_la_SOURCES = $(direntry40_sources)
+endif
 
 INCLUDES = $(includedir)
 
