--- a/plugin/extent40/Makefile.am
+++ b/plugin/extent40/Makefile.am
@@ -3,15 +3,18 @@ libdir			    = $(plugindir)
 
 extent40_sources	    = extent40.c extent40.h
 
-lib_LTLIBRARIES		    = libextent40.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES	    = libextent40-static.la
+
+libextent40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libextent40_static_la_SOURCES = $(extent40_sources)
+else
+lib_LTLIBRARIES		    = libextent40.la
 
 libextent40_la_LIBADD	    = 
 libextent40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
 libextent40_la_SOURCES	    = $(extent40_sources)
-
-libextent40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
-libextent40_static_la_SOURCES = $(extent40_sources)
+endif
 
 INCLUDES = $(includedir)
 
