--- a/plugin/fnv1_hash/Makefile.am
+++ b/plugin/fnv1_hash/Makefile.am
@@ -3,14 +3,17 @@ libdir				= $(plugindir)
 
 fnv1_hash_sources		= fnv1_hash.c
 
-lib_LTLIBRARIES			= libfnv1_hash.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES		= libfnv1_hash-static.la
-
-libfnv1_hash_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
-libfnv1_hash_la_SOURCES		= $(fnv1_hash_sources)
 
 libfnv1_hash_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
 libfnv1_hash_static_la_SOURCES	= $(fnv1_hash_sources)
+else
+lib_LTLIBRARIES			= libfnv1_hash.la
+
+libfnv1_hash_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
+libfnv1_hash_la_SOURCES		= $(fnv1_hash_sources)
+endif
 
 INCLUDES = $(includedir)
 
