--- a/plugin/format40/Makefile.am
+++ b/plugin/format40/Makefile.am
@@ -7,15 +7,18 @@ else
 format40_sources		= format40.c format40_repair.c format40.h
 endif
 
-lib_LTLIBRARIES			= libformat40.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES		= libformat40-static.la
+
+libformat40_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
+libformat40_static_la_SOURCES	= $(format40_sources)
+else
+lib_LTLIBRARIES			= libformat40.la
 
 libformat40_la_LIBADD		= $(top_builddir)/libaal/libaal.la
 libformat40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
 libformat40_la_SOURCES		= $(format40_sources)
-
-libformat40_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
-libformat40_static_la_SOURCES	= $(format40_sources)
+endif
 
 INCLUDES = $(includedir)
 
