--- a/plugin/reg40/Makefile.am
+++ b/plugin/reg40/Makefile.am
@@ -3,15 +3,18 @@ libdir			    = $(plugindir)
 
 file40_sources		    = reg40.c reg40.h
 
-lib_LTLIBRARIES		    = libreg40.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES	    = libreg40-static.la
+
+libreg40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libreg40_static_la_SOURCES = $(file40_sources)
+else
+lib_LTLIBRARIES		    = libreg40.la
 
 libreg40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la
 libreg40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
 libreg40_la_SOURCES	    = $(file40_sources)
-
-libreg40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
-libreg40_static_la_SOURCES = $(file40_sources)
+endif
 
 INCLUDES = $(includedir)
 
