--- a/plugin/rupasov_hash/Makefile.am
+++ b/plugin/rupasov_hash/Makefile.am
@@ -3,14 +3,17 @@ libdir				  = $(plugindir)
 
 rupasov_hash_sources		  = rupasov_hash.c
 
-lib_LTLIBRARIES			  = librupasov_hash.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES		  = librupasov_hash-static.la
-
-librupasov_hash_la_LDFLAGS	  = $(PLUGIN_LDFLAGS)
-librupasov_hash_la_SOURCES	  = $(rupasov_hash_sources)
 
 librupasov_hash_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
 librupasov_hash_static_la_SOURCES = $(rupasov_hash_sources)
+else
+lib_LTLIBRARIES			  = librupasov_hash.la
+
+librupasov_hash_la_LDFLAGS	  = $(PLUGIN_LDFLAGS)
+librupasov_hash_la_SOURCES	  = $(rupasov_hash_sources)
+endif
 
 INCLUDES = $(includedir)
 
