--- a/plugin/sdext_unix/Makefile.am
+++ b/plugin/sdext_unix/Makefile.am
@@ -3,15 +3,18 @@ libdir				= $(plugindir)
 
 sdext_unix_sources		= sdext_unix.c sdext_unix.h
 
-lib_LTLIBRARIES			= libsdext_unix.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES		= libsdext_unix-static.la
+
+libsdext_unix_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libsdext_unix_static_la_SOURCES = $(sdext_unix_sources)
+else
+lib_LTLIBRARIES			= libsdext_unix.la
 
 libsdext_unix_la_LIBADD		= 
 libsdext_unix_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
 libsdext_unix_la_SOURCES	= $(sdext_unix_sources)
-
-libsdext_unix_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
-libsdext_unix_static_la_SOURCES = $(sdext_unix_sources)
+endif
 
 INCLUDES = $(includedir)
 
