--- a/plugin/stat40/Makefile.am
+++ b/plugin/stat40/Makefile.am
@@ -7,15 +7,18 @@ else
 stat40_sources              = stat40.c stat40_repair.c stat40.h
 endif
 
-lib_LTLIBRARIES		    = libstat40.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES	    = libstat40-static.la
+
+libstat40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libstat40_static_la_SOURCES = $(stat40_sources)
+else
+lib_LTLIBRARIES		    = libstat40.la
 
 libstat40_la_LIBADD	    = 
 libstat40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
 libstat40_la_SOURCES	    = $(stat40_sources)
-
-libstat40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
-libstat40_static_la_SOURCES = $(stat40_sources)
+endif
 
 INCLUDES = $(includedir)
 
