--- a/plugin/tea_hash/Makefile.am
+++ b/plugin/tea_hash/Makefile.am
@@ -3,14 +3,17 @@ libdir			      = $(plugindir)
 
 tea_hash_sources	      = tea_hash.c
 
-lib_LTLIBRARIES		      = libtea_hash.la
+if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES	      = libtea_hash-static.la
-
-libtea_hash_la_LDFLAGS	      = $(PLUGIN_LDFLAGS)
-libtea_hash_la_SOURCES	      = $(tea_hash_sources)
 
 libtea_hash_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
 libtea_hash_static_la_SOURCES = $(tea_hash_sources)
+else
+lib_LTLIBRARIES		      = libtea_hash.la
+
+libtea_hash_la_LDFLAGS	      = $(PLUGIN_LDFLAGS)
+libtea_hash_la_SOURCES	      = $(tea_hash_sources)
+endif
 
 INCLUDES = $(includedir)
 
