--- a/plugin/dir40/Makefile.am
+++ b/plugin/dir40/Makefile.am
@@ -6,8 +6,9 @@ dir40_sources		    = dir40.c dir40.h
 if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES	    = libdir40-static.la
 
-libdir40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
-libdir40_static_la_SOURCES = $(dir40_sources)
+libdir40_static_la_LIBADD   =
+libdir40_static_la_LDFLAGS  = $(PLUGIN_LDFLAGS)
+libdir40_static_la_SOURCES  = $(dir40_sources)
 else
 lib_LTLIBRARIES		    = libdir40.la
 
