--- a/plugin/journal40/Makefile.am
+++ b/plugin/journal40/Makefile.am
@@ -6,12 +6,15 @@ journal40_sources		= journal40.c journal40.h
 if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES		= libjournal40-static.la
 
+libjournal40_static_la_LIBADD	= 
 libjournal40_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
 libjournal40_static_la_SOURCES	= $(journal40_sources)
 else
 lib_LTLIBRARIES			= libjournal40.la
 
-libjournal40_la_LIBADD		= $(top_builddir)/libaal/libaal.la
+libjournal40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
+				  $(top_builddir)/libaux/libaux-static.la
+				  
 libjournal40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
 libjournal40_la_SOURCES		= $(journal40_sources)
 endif
