--- a/plugin/key40/Makefile.am
+++ b/plugin/key40/Makefile.am
@@ -10,12 +10,15 @@ endif
 if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES		= libkey40-static.la
 
+libkey40_static_la_LIBADD	= 
 libkey40_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
 libkey40_static_la_SOURCES	= $(key40_sources)
 else
 lib_LTLIBRARIES			= libkey40.la
 
-libkey40_la_LIBADD		= $(top_builddir)/libaal/libaal.la
+libkey40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
+				  $(top_builddir)/libaux/libaux-static.la
+				  
 libkey40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
 libkey40_la_SOURCES		= $(key40_sources)
 endif
