--- a/plugin/nodeptr40/Makefile.am
+++ b/plugin/nodeptr40/Makefile.am
@@ -10,12 +10,15 @@ endif
 if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES		= libnodeptr40-static.la
 
+libnodeptr40_static_la_LIBADD	= 
 libnodeptr40_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
 libnodeptr40_static_la_SOURCES	= $(nodeptr40_sources)
 else
 lib_LTLIBRARIES			= libnodeptr40.la
 
-libnodeptr40_la_LIBADD		= $(top_builddir)/libaal/libaal.la
+libnodeptr40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
+				  $(top_builddir)/libaux/libaux-static.la
+				  
 libnodeptr40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
 libnodeptr40_la_SOURCES		= $(nodeptr40_sources)
 endif
