--- a/plugin/sdext_symlink/Makefile.am
+++ b/plugin/sdext_symlink/Makefile.am
@@ -6,12 +6,15 @@ sdext_symlink_sources		   = sdext_symlink.c
 if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES		   = libsdext_symlink-static.la
 
+libsdext_symlink_static_la_LIBADD  = 
 libsdext_symlink_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
 libsdext_symlink_static_la_SOURCES = $(sdext_symlink_sources)
 else
 lib_LTLIBRARIES			   = libsdext_symlink.la
 
-libsdext_symlink_la_LIBADD	   = 
+libsdext_symlink_la_LIBADD	   = $(top_builddir)/libaal/libaal.la \
+				     $(top_builddir)/libaux/libaux-static.la
+				     
 libsdext_symlink_la_LDFLAGS	   = $(PLUGIN_LDFLAGS)
 libsdext_symlink_la_SOURCES	   = $(sdext_symlink_sources)
 endif
