--- a/plugin/journal36/Makefile.am
+++ b/plugin/journal36/Makefile.am
@@ -6,6 +6,7 @@ journal36_sources		= journal36.c journal36.h
 if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES		= libjournal36-static.la
 
+libjournal36_static_la_LIBADD	= 
 libjournal36_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
 libjournal36_static_la_SOURCES	= $(journal36_sources)
 else
