--- a/plugin/reg40/Makefile.am
+++ b/plugin/reg40/Makefile.am
@@ -6,8 +6,9 @@ file40_sources		    = reg40.c reg40.h
 if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES	    = libreg40-static.la
 
-libreg40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
-libreg40_static_la_SOURCES = $(file40_sources)
+libreg40_static_la_LIBADD   =
+libreg40_static_la_LDFLAGS  = $(PLUGIN_LDFLAGS)
+libreg40_static_la_SOURCES  = $(file40_sources)
 else
 lib_LTLIBRARIES		    = libreg40.la
 
