--- a/plugin/stat40/Makefile.am
+++ b/plugin/stat40/Makefile.am
@@ -10,12 +10,15 @@ endif
 if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES	    = libstat40-static.la
 
+libstat40_static_la_LIBADD  = 
 libstat40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
 libstat40_static_la_SOURCES = $(stat40_sources)
 else
 lib_LTLIBRARIES		    = libstat40.la
 
-libstat40_la_LIBADD	    = 
+libstat40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la \
+			      $(top_builddir)/libaux/libaux-static.la
+			      
 libstat40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
 libstat40_la_SOURCES	    = $(stat40_sources)
 endif
