--- a/plugin/nodeptr40/Makefile.am
+++ b/plugin/nodeptr40/Makefile.am
@@ -7,6 +7,7 @@ else
 nodeptr40_sources               = nodeptr40.c nodeptr40_repair.c nodeptr40.h
 endif
 
+
 noinst_LTLIBRARIES		= libnodeptr40-static.la
 lib_LTLIBRARIES			= libnodeptr40.la
 
@@ -15,12 +16,12 @@ libnodeptr40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
 
 if ENABLE_MONOLITHIC
 libnodeptr40_static_la_SOURCES	= $(nodeptr40_sources)
-else
+#else
 libnodeptr40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libnodeptr40_la_SOURCES		= $(nodeptr40_sources)
-endif
+#endif
 
 INCLUDES = $(includedir)
 
