--- a/plugin/stat40/Makefile.am
+++ b/plugin/stat40/Makefile.am
@@ -7,6 +7,7 @@ else
 stat40_sources              = stat40.c stat40_repair.c stat40.h
 endif
 
+
 noinst_LTLIBRARIES	    = libstat40-static.la
 lib_LTLIBRARIES		    = libstat40.la
 
@@ -15,12 +16,12 @@ libstat40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
 
 if ENABLE_MONOLITHIC
 libstat40_static_la_SOURCES = $(stat40_sources)
-else
+#else
 libstat40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la \
 			      $(top_builddir)/libaux/libaux-static.la
 
 libstat40_la_SOURCES	    = $(stat40_sources)
-endif
+#endif
 
 INCLUDES = $(includedir)
 
