--- a/plugin/node40/Makefile.am
+++ b/plugin/node40/Makefile.am
@@ -7,6 +7,7 @@ else
 node40_sources              = node40.c node40_repair.c node40.h
 endif
 
+
 noinst_LTLIBRARIES	    = libnode40-static.la
 lib_LTLIBRARIES		    = libnode40.la
 
@@ -15,12 +16,12 @@ libnode40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
 
 if ENABLE_MONOLITHIC
 libnode40_static_la_SOURCES = $(node40_sources)
-else
+#else
 libnode40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la \
 			      $(top_builddir)/libaux/libaux-static.la
 
 libnode40_la_SOURCES	    = $(node40_sources)
-endif
+#endif
 
 INCLUDES = $(includedir)
 
