--- a/plugin/direntry40/Makefile.am
+++ b/plugin/direntry40/Makefile.am
@@ -7,6 +7,7 @@ else
 direntry40_sources              = direntry40.c direntry40_repair.c direntry40.h
 endif
 
+
 noinst_LTLIBRARIES		= libdirentry40-static.la
 lib_LTLIBRARIES			= libdirentry40.la
 
@@ -15,12 +16,12 @@ libdirentry40_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
 
 if ENABLE_MONOLITHIC
 libdirentry40_static_la_SOURCES = $(direntry40_sources)
-else
+#else
 libdirentry40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libdirentry40_la_SOURCES	= $(direntry40_sources)
-endif
+#endif
 
 INCLUDES = $(includedir)
 
