--- a/plugin/key40/Makefile.am
+++ b/plugin/key40/Makefile.am
@@ -7,6 +7,7 @@ else
 key40_sources                   = key40.c key40_repair.c key40.h
 endif
 
+
 noinst_LTLIBRARIES		= libkey40-static.la
 lib_LTLIBRARIES			= libkey40.la
 
@@ -15,12 +16,12 @@ libkey40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
 
 if ENABLE_MONOLITHIC
 libkey40_static_la_SOURCES	= $(key40_sources)
-else
+#else
 libkey40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libkey40_la_SOURCES		= $(key40_sources)
-endif
+#endif
 
 INCLUDES = $(includedir)
 
