--- a/plugin/key40/Makefile.am
+++ b/plugin/key40/Makefile.am
@@ -16,12 +16,12 @@ libkey40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
 
 if ENABLE_MONOLITHIC
 libkey40_static_la_SOURCES	= $(key40_sources)
-#else
+else
 libkey40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libkey40_la_SOURCES		= $(key40_sources)
-#endif
+endif
 
 INCLUDES = $(includedir)
 
