--- a/plugin/format40/Makefile.am
+++ b/plugin/format40/Makefile.am
@@ -11,12 +11,12 @@ libformat40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
 
 if ENABLE_MONOLITHIC
 libformat40_static_la_SOURCES	= $(format40_sources)
-#else
+else
 libformat40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libformat40_la_SOURCES		= $(format40_sources)
-#endif
+endif
 
 INCLUDES = $(includedir)
 
