--- a/demos/Makefile.am
+++ b/demos/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = list ls cat
+noinst_PROGRAMS = list ls cat plugin
 
 list_SOURCES	= list.c
 
@@ -20,6 +20,14 @@ cat_SOURCES	= cat.c
 cat_LDFLAGS	= $(PROGS_LDFLAGS)
 
 cat_LDADD 	= $(top_builddir)/libreiser4/libreiser4.la \
+	          $(top_builddir)/progs/libmisc/libmisc.la \
+		  $(PROGS_LIBS)
+
+plugin_SOURCES	= plugin.c
+
+plugin_LDFLAGS	= $(PROGS_LDFLAGS)
+
+plugin_LDADD 	= $(top_builddir)/libreiser4/libreiser4.la \
 	          $(top_builddir)/progs/libmisc/libmisc.la \
 		  $(PROGS_LIBS)
 
