--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS 			= format40 journal40 alloc40 node40 stat40 direntry40 nodeptr40 \
 				  oid40 key40 dir40 format36 journal36 alloc36 r5_hash tea_hash \
                                   rupasov_hash fnv1_hash sdext_unix tail40 sdext_lw extent40 reg40 \
-                                  sdext_lt sdext_symlink
+                                  sdext_lt sdext_symlink symlink40
 
 noinst_LTLIBRARIES	     	= libheader.la libfooter.la libreiser4-plugin.la
 
@@ -23,6 +23,7 @@ libreiser4_plugin_la_LIBADD  	= libheader.la \
 			          key40/libkey40-static.la \
 			          dir40/libdir40-static.la \
 			          reg40/libreg40-static.la \
+			          symlink40/libsymlink40-static.la \
 			          r5_hash/libr5_hash-static.la \
 			          tea_hash/libtea_hash-static.la \
 			          rupasov_hash/librupasov_hash-static.la \
