dded print methods for format, alloc, oid and journal.
(Logical change 1.2647)

--- a/configure.in
+++ b/configure.in
@@ -264,6 +264,7 @@ AC_OUTPUT([
     plugin/key40/Makefile
     plugin/dir40/Makefile
     plugin/reg40/Makefile
+    plugin/symlink40/Makefile
     plugin/format36/Makefile
     plugin/journal36/Makefile
     plugin/alloc36/Makefile
