Fixes in symlink40.c and file.c
(Logical change 1.2648)

--- a/plugin/symlink40/Makefile.am
+++ b/plugin/symlink40/Makefile.am
@@ -5,7 +5,7 @@ symlink40_sources	        = symlink40.c symlink40.h
 
 if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES	        = libsymlink40-static.la
-libsymlink40_static_la_SOURCES  = $(file40_sources)
+libsymlink40_static_la_SOURCES  = $(symlink40_sources)
 else
 lib_LTLIBRARIES		        = libsymlink40.la
 libsymlink40_la_LIBADD	        = $(top_builddir)/libaal/libaal.la
