Moved file plugin code to plugin/file/libfile40
(Logical change 1.2649)

--- a/configure.in
+++ b/configure.in
@@ -262,9 +262,10 @@ AC_OUTPUT([
     plugin/tail40/Makefile
     plugin/extent40/Makefile
     plugin/key40/Makefile
-    plugin/dir40/Makefile
-    plugin/reg40/Makefile
-    plugin/symlink40/Makefile
+    plugin/file/Makefile
+    plugin/file/dir40/Makefile
+    plugin/file/reg40/Makefile
+    plugin/file/symlink40/Makefile
     plugin/format36/Makefile
     plugin/journal36/Makefile
     plugin/alloc36/Makefile
