--- a/plugin/file/Makefile.am
+++ b/plugin/file/Makefile.am
@@ -1,8 +1,1 @@
-includedir		    = -I$(top_srcdir)/include
-SUBDIRS 		    = dir40 reg40 symlink40
-
-noinst_LTLIBRARIES	    = libfile40-static.la
-libfile40_static_la_SOURCES = file40.c file40.h
-
-INCLUDES = $(includedir)
-
+SUBDIRS 		    = file40 dir40 reg40 symlink40
