--- a/plugin/file/reg40/Makefile.am
+++ b/plugin/file/reg40/Makefile.am
@@ -8,7 +8,8 @@ noinst_LTLIBRARIES	    = libreg40-static.la
 libreg40_static_la_SOURCES  = $(reg40_sources)
 else
 lib_LTLIBRARIES		    = libreg40.la
-libreg40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la
+libreg40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la \
+			      $(top_builddir)/plugin/file/file40/libfile40-static.la
 libreg40_la_SOURCES	    = $(reg40_sources)
 endif
 
