Joined node and joint structues. Cleanups
(Logical change 1.2697)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,8 @@
 if ENABLE_COMPACT
 SUBDIRS         = libaal libaux plugin libreiser4 include doc debug
 else
-SUBDIRS         = libaal libaux plugin libreiser4 librepair progs demos include doc debug
+SUBDIRS         = libaal libaux plugin libreiser4 progs demos include doc debug
+#SUBDIRS         = libaal libaux plugin libreiser4 librepair progs demos include doc debug
 endif
 
 EXTRA_DIST	= ABOUT-NLS AUTHORS COPYING TODO NEWS BUGS README CREDITS THANKS \
