--- a/config.h.in
+++ b/config.h.in
@@ -23,22 +23,11 @@
 #undef HAVE_LIBREADLINE
 
 
-/* Define to one of `_getb67', `GETB67', `getb67' for Cray-2 and Cray-YMP
-   systems. This function is required for `alloca.c' support on those systems.
-   */
-#undef CRAY_STACKSEG_END
+/* Define if you have the `alarm' function. */
+#undef HAVE_ALARM
 
-/* Define if using `alloca.c'. */
-#undef C_ALLOCA
-
-/* Define if you have `alloca', as a function or macro. */
-#undef HAVE_ALLOCA
-
-/* Define if you have <alloca.h> and it should be used (not on Ultrix). */
-#undef HAVE_ALLOCA_H
-
-/* Define if you have the <argz.h> header file. */
-#undef HAVE_ARGZ_H
+/* Define if you have the <dirent.h> header file, and it defines `DIR'. */
+#undef HAVE_DIRENT_H
 
 /* Define if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
@@ -49,14 +38,11 @@
 /* Define if you have the <fcntl.h> header file. */
 #undef HAVE_FCNTL_H
 
-/* Define if you have the `getcwd' function. */
-#undef HAVE_GETCWD
+/* Define if you have the `getmntent' function. */
+#undef HAVE_GETMNTENT
 
-/* Define if you have the `getopt_long_only' function. */
-#undef HAVE_GETOPT_LONG_ONLY
-
-/* Define if you have the `getwd' function. */
-#undef HAVE_GETWD
+/* Define if you have the `hasmntopt' function. */
+#undef HAVE_HASMNTOPT
 
 /* Define if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
@@ -70,23 +56,17 @@
 /* Define if you have the `uuid' library (-luuid). */
 #undef HAVE_LIBUUID
 
-/* Define if your system has a working `malloc' function. */
-#undef HAVE_MALLOC
-
-/* Define if you have the <malloc.h> header file. */
-#undef HAVE_MALLOC_H
-
-/* Define if you have the `memmove' function. */
-#undef HAVE_MEMMOVE
-
 /* Define if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
 
-/* Define if you have the `mempcpy' function. */
-#undef HAVE_MEMPCPY
-
 /* Define if you have the `memset' function. */
 #undef HAVE_MEMSET
+
+/* Define if you have the <mntent.h> header file. */
+#undef HAVE_MNTENT_H
+
+/* Define if you have the <ndir.h> header file, and it defines `DIR'. */
+#undef HAVE_NDIR_H
 
 /* Define if you have the <readline/history.h> header file. */
 #undef HAVE_READLINE_HISTORY_H
@@ -97,8 +77,9 @@
 /* Define if you have the `rl_completion_matches' function. */
 #undef HAVE_RL_COMPLETION_MATCHES
 
-/* Define if you have the <stddef.h> header file. */
-#undef HAVE_STDDEF_H
+/* Define if `stat' has the bug that it succeeds when given the zero-length
+   file name argument. */
+#undef HAVE_STAT_EMPTY_STRING_BUG
 
 /* Define if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
@@ -106,20 +87,8 @@
 /* Define if you have the <stdlib.h> header file. */
 #undef HAVE_STDLIB_H
 
-/* Define if you have the `stpcpy' function. */
-#undef HAVE_STPCPY
-
-/* Define if you have the `strcasecmp' function. */
-#undef HAVE_STRCASECMP
-
-/* Define if you have the `strchr' function. */
-#undef HAVE_STRCHR
-
-/* Define if you have the `strcspn' function. */
-#undef HAVE_STRCSPN
-
-/* Define if you have the `strdup' function. */
-#undef HAVE_STRDUP
+/* Define if you have the `strerror' function. */
+#undef HAVE_STRERROR
 
 /* Define if you have the <strings.h> header file. */
 #undef HAVE_STRINGS_H
@@ -127,14 +96,23 @@
 /* Define if you have the <string.h> header file. */
 #undef HAVE_STRING_H
 
-/* Define if you have the `strsep' function. */
-#undef HAVE_STRSEP
+/* Define if you have the `strtol' function. */
+#undef HAVE_STRTOL
 
-/* Define if you have the `strstr' function. */
-#undef HAVE_STRSTR
+/* Define if `st_rdev' is member of `struct stat'. */
+#undef HAVE_STRUCT_STAT_ST_RDEV
 
-/* Define if you have the `strtoul' function. */
-#undef HAVE_STRTOUL
+/* Define if you have the <sys/dir.h> header file, and it defines `DIR'. */
+#undef HAVE_SYS_DIR_H
+
+/* Define if you have the <sys/ioctl.h> header file. */
+#undef HAVE_SYS_IOCTL_H
+
+/* Define if you have the <sys/mount.h> header file. */
+#undef HAVE_SYS_MOUNT_H
+
+/* Define if you have the <sys/ndir.h> header file, and it defines `DIR'. */
+#undef HAVE_SYS_NDIR_H
 
 /* Define if you have the <sys/stat.h> header file. */
 #undef HAVE_SYS_STAT_H
@@ -142,25 +120,24 @@
 /* Define if you have the <sys/types.h> header file. */
 #undef HAVE_SYS_TYPES_H
 
+/* Define if you have the <sys/vfs.h> header file. */
+#undef HAVE_SYS_VFS_H
+
 /* Define if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
 /* Define if you have the <uuid/uuid.h> header file. */
 #undef HAVE_UUID_UUID_H
 
+/* Define if `lstat' dereferences a symlink specified with a trailing slash.
+   */
+#undef LSTAT_FOLLOWS_SLASHED_SYMLINK
+
 /* Name of package */
 #undef PACKAGE
 
 /* The size of a `off_t', as computed by sizeof. */
 #undef SIZEOF_OFF_T
-
-/* If using the C implementation of alloca, define if you know the
-   direction of stack growth for your system; otherwise it will be
-   automatically deduced at run-time.
-        STACK_DIRECTION > 0 => grows toward higher addresses
-        STACK_DIRECTION < 0 => grows toward lower addresses
-        STACK_DIRECTION = 0 => direction of growth unknown */
-#undef STACK_DIRECTION
 
 /* Define if you have the ANSI C header files. */
 #undef STDC_HEADERS
