--- a/configure.in
+++ b/configure.in
@@ -142,9 +142,12 @@ fi
 
 # Checks for programs.
 AC_PROG_CC
+AC_PROG_CPP
 AC_PROG_INSTALL
 AC_PROG_LN_S
+AC_PROG_MAKE_SET
 AC_PROG_RANLIB
+AC_PROG_AWK
 
 AC_SYS_LARGEFILE
 
@@ -182,8 +185,9 @@ are required for the --with-readline option.
 fi
 
 # Checks for header files.
+AC_HEADER_DIRENT
 AC_HEADER_STDC
-AC_CHECK_HEADERS([alloca.h argz.h errno.h fcntl.h malloc.h stddef.h stdlib.h string.h strings.h unistd.h])
+AC_CHECK_HEADERS([errno.h fcntl.h mntent.h stdint.h stdlib.h string.h sys/ioctl.h sys/mount.h sys/vfs.h unistd.h])
 
 dnl Checks for typedefs, structures and compiler characteristics.
 AC_C_BIGENDIAN
@@ -200,11 +204,12 @@ fi
 AC_C_CONST
 AC_C_INLINE
 AC_TYPE_SIZE_T
+AC_CHECK_MEMBERS([struct stat.st_rdev])
 
 # Checks for library functions.
-AC_FUNC_ALLOCA
-AC_FUNC_MALLOC
-AC_CHECK_FUNCS([getcwd getwd memmove mempcpy memset stpcpy strcasecmp strchr strcspn strdup strstr strtoul strsep getopt_long_only])
+AC_PROG_GCC_TRADITIONAL
+AC_FUNC_STAT
+AC_CHECK_FUNCS([alarm getmntent hasmntopt memset strerror strtol])
 
 dnl Check for libdl, if we are doing dynamic loading
 LIBREISER4_LIBS=""
