Fixes in node.c
(Logical change 1.2880)

--- a/include/repair/Makefile.am
+++ b/include/repair/Makefile.am
@@ -1,5 +1,5 @@
 repairincludedir	= $(includedir)/repair
 repairinclude_HEADERS   = librepair.h repair.h filesystem.h master.h format.h \
 			  journal.h node.h coord.h item.h filter.h disk_scan.h \
-			  twig_scan.h add_missing.h
+			  twig_scan.h add_missing.h tree.h
 
