--- a/configure.in
+++ b/configure.in
@@ -3,6 +3,19 @@ AC_INIT(libreiser4/libreiser4.c)
 AC_CANONICAL_HOST
 AC_PREREQ(2.50)
 
+AH_TEMPLATE([PACKAGE], [Define this to be the name of the package.])
+AH_TEMPLATE([VERSION], [Define to the version of the package.])
+
+AH_TEMPLATE([LIBREISER4_MAX_INTERFACE_VERSION], [])
+AH_TEMPLATE([LIBREISER4_MIN_INTERFACE_VERSION], [])
+AH_TEMPLATE([loff_t], [])
+AH_TEMPLATE([ENABLE_NLS], [])
+AH_TEMPLATE([ENABLE_COMPACT], [])
+AH_TEMPLATE([ENABLE_MONOLITHIC], [])
+AH_TEMPLATE([ENABLE_DEBUG], [])
+AH_TEMPLATE([HAVE_LIBUUID], [])
+AH_TEMPLATE([HAVE_LIBREADLINE], [])
+
 LIBREISER4_MAJOR_VERSION=0
 LIBREISER4_MINOR_VERSION=3
 LIBREISER4_MICRO_VERSION=0
