--- a/plugin/alloc/alloc40/Makefile.am
+++ b/plugin/alloc/alloc40/Makefile.am
@@ -1,7 +1,7 @@
 includedir		     = -I$(top_srcdir)/include
 libdir			     = $(plugindir)
 
-alloc40_sources		     = alloc40.c alloc40.h
+alloc40_sources		     = alloc40.c alloc40_repair.c alloc40.h
 
 if ENABLE_MONOLITHIC
 noinst_LTLIBRARIES	     = liballoc40-static.la
